small debug in DBConfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
-#DB properties:db.driver=org.h2.Driverdb.url=jdbc:h2:~/testdb.username=sadb.password=sa
-#Hibernate Configuration:db.hibernate.dialect=org.hibernate.dialect.H2Dialectdb.hibernate.show_sql=falsedb.entitymanager.packages.to.scan=com.demien.sboot.domaindb.hibernate.hbm2ddl.auto = create
+#DB properties:
+db.driver=org.h2.Driver\
+  db.url=jdbc:h2:~/test\
+  db.username=sa\
+  db.password=
+#Hibernate Configuration:
+db.hibernate.dialect=org.hibernate.dialect.H2Dialect\
+  db.hibernate.show_sql=false\
+  db.entitymanager.packages.to.scan=ACMEInvoice.domain\
+  db.hibernate.hbm2ddl.auto = create
